crates/pi/src/modes/interactive/snapshots/pi__modes__interactive__tests__loading_state_widths.snap
---
source: crates/pi/src/modes/interactive/tests.rs
expression: triple_plain(&state)
---
===== width 20 =====
  pi v0.1.0  •      
  type a message    
  to begin          
  Pi can explain    
  its own features  
  and look up its   
  docs. Ask it how  
  to use or extend  
  Pi.               
  ? shortcuts ·     
  ctrl+o expand     
  tools ·           
  shift+tab         
  thinking          
                    
  ⠋ Working… · esc  
  to cancel         
❯ Type a message…   
~/projects/pi (main)
• refactor          
1.2k in · 567 out · 
$0.012 · 42% of 200k
(auto)              
claude-sonnet •     
medium              
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    
                    

===== width 80 =====
  pi v0.1.0  •  type a message to begin                                         
  Pi can explain its own features and look up its docs. Ask it how to use or    
  extend Pi.                                                                    
  ? shortcuts · ctrl+o expand tools · shift+tab thinking                        
                                                                                
  ⠋ Working… · esc to cancel                                                    
❯ Type a message…                                                               
~/projects/pi (main) • refactor                                                 
1.2k in · 567 out · $0.012 · 42% of 200k (auto)           claude-sonnet • medium
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                

===== width 160 =====
  pi v0.1.0  •  type a message to begin                                                                                                                         
  Pi can explain its own features and look up its docs. Ask it how to use or extend Pi.                                                                         
  ? shortcuts · ctrl+o expand tools · shift+tab thinking                                                                                                        
                                                                                                                                                                
  ⠋ Working… · esc to cancel                                                                                                                                    
❯ Type a message…                                                                                                                                               
~/projects/pi (main) • refactor                                                                                                                                 
1.2k in · 567 out · $0.012 · 42% of 200k (auto)           claude-sonnet • medium
